--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12
-        registry-url: https://npm.pkg.github.com/
+        registry-url: https://npm.pkg.github.com/andrewhakimian
 
     - name: Install dependencies
       run: npm ci
