--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -19,11 +19,14 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      working-directory: publish-package
 
     - name: Build
       run: npm run build
+      working-directory: publish-package
 
     - name: Publish
       run: npm publish
+      working-directory: publish-package
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
