--- a/.github/actions/local-action/package.json
+++ b/.github/actions/local-action/package.json
@@ -1,7 +1,7 @@
 {
   "name": "local-action",
   "version": "1.0.0",
-  "description": "Local exercise action to verify the desire commit was removed",
+  "description": "Local exercise action to verify the desired commit was removed",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,5 +20,5 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0"
-  },
+  }
 }
