--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -16,7 +16,8 @@ jobs:
       with:
         node-version: 12
         registry-url: https://npm.pkg.github.com/andrewhakimian
-
+    - name: Display package.json content
+      run: cat package.json
     - name: Install dependencies
       run: npm ci
       
