--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -16,15 +16,21 @@ jobs:
       with:
         node-version: 12
         registry-url: https://npm.pkg.github.com/andrewhakimian
+    
     - name: Display package.json content
       run: cat package.json
+      working-directory: /.github/actions/package.json
+      
     - name: Install dependencies
       run: npm ci
+      working-directory: /.github/actions/package.json
       
     - name: Build
       run: npm run build
+      working-directory: /.github/actions/package.json
       
     - name: Publish
       run: npm publish
+      working-directory: /.github/actions/package.json
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
