--- a/.github/actions/local-action/package.json
+++ b/.github/actions/local-action/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.31.3"
   }
 }
